--- a/路由.md
+++ b/路由.md
@@ -25,7 +25,7 @@ export class UserLoginComponent implements OnInit {
 ```
 
 路由文件：
-```json
+```typescript
 {
     path: 'login',
     component: UserLoginComponent
@@ -55,7 +55,7 @@ export class UserLoginComponent implements OnInit {
 }
 ```
 路由文件：
-```json
+```typescript
 {
     path: 'login/:id',
     component: UserLoginComponent
@@ -85,7 +85,7 @@ console.log(d[0]['id'])
 }
 ```
 路由文件：
-```json
+```typescript
 {
     path: 'login',
     component: UserLoginComponent,
