--- a/路由.md
+++ b/路由.md
@@ -7,7 +7,7 @@ URL表示：
     http://localhost:4200/user/login?id=1&name=hushukang
 
 HTML：
-```
+```html
 <a [routerLink]="['login']" [queryParams]="{id: 1, name: 'hushukang'}">Login</a>
 ```
 
